--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "julia"
 version = "0.1.0"
-authors = ["Az"]
+authors = ["Andrew Smith"]
 edition = "2021"
 
 [lib]
@@ -9,7 +9,6 @@ crate-type = ["cdylib"]
 
 [features]
 default = ["console_error_panic_hook", "wee_alloc"]
-
 
 [dependencies]
 wasm-bindgen = "*"
@@ -26,7 +25,6 @@ console_error_panic_hook = { version = "*", optional = true }
 # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
 # compared to the default allocator's ~10K. It is slower than the default
 # allocator, however.
-#
 wee_alloc = { version = "*", optional = true }
 
 [dependencies.web-sys]
