--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "julia"
+description = "Fractal rendering in the browser using rust compiled to wasm"
+license = "MIT"
 version = "0.1.0"
 authors = ["Andrew Smith"]
 edition = "2021"
+repository = "https://github.com/virgesmith/julia"
 
 [lib]
 crate-type = ["cdylib"]
