--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,17 @@ wasm-bindgen = "*"
 js-sys = "*"
 num-complex = "*"
 num-traits = "*"
+rayon = "*"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "*", optional = true }
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 
 # [dependencies.web-sys]
 # version = "^0.3.4"
