--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ rayon = "*"
 console_error_panic_hook = { version = "*", optional = true }
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = false
+wasm-opt = true
 
 
 # [dependencies.web-sys]
